--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,8 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:gravity="center"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -20,4 +21,10 @@
             app:layout_constraintTop_toTopOf="parent" />
     </LinearLayout>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_marginTop="20dp"
+        android:id="@+id/btn_update"
+        android:text="Update Bar New Data"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
